--- a/index.html
+++ b/index.html
@@ -9,12 +9,35 @@
 
 <body>
   <script>
-    let num;//변수를 선언 (자바스크립트로 메모리를 생성)
-    num = 3; //변수에 값 할당 (생성된 메모리 값 넣음)
-    let num2 = 5;
-    console.log(num2);
-    num2 = 10;
-    console.log(num2);
+    /*
+      원시형자료(primitive type) vs 첨조횽자료(reference type)
+      원시형자료는 메모리에 값자체가 담기는 자료 (문자열, 숫자, boolean, undefined)
+      원시형자료는 callstack에 메모리 선언후 값도 담김
+
+      참조형자료 (베열, 객체, null)
+      참조형자료는 메모리에 값이 담기는게 아닌 값의 참조위치값이 담김
+      해당값으로 실행할 수 있는 여러 기능들까지 같이 참조됨
+      참조형자료는 메모리는 callstack에 생기고 값 자체룰 heap memory에 생성됨
+      heap메모리에 있는 값의 위치값이 callstack메모리에 참조됨
+
+     */
+
+    let text = 'hello';
+    let num = 3;
+    let isFemaie = false;
+    let err;
+
+    let colors = ['red', 'green', 'blue'];
+    let student1 = {
+      name: '홍길동',
+      isFemale: false,
+      interests: ['game', 'movie', 'travel']
+    }
+    let score = null;
+
+    console.log(typeof student1);
+
+    console.log(interests)
   </script>
 </body>
 
