--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       참조형자료는 메모리는 callstack에 생기고 값 자체룰 heap memory에 생성됨
       heap메모리에 있는 값의 위치값이 callstack메모리에 참조됨
 
+      자바스크립트에서의 객체지향
+      모든 객체에는 prototype이라는 공통의 저장공간이 있고
+      prototype안에는 해당 참조형 자료가 활용할수 있는 다양한 메서드를 담고 있음
+
+      deep copy(깊은 복사) vs shallow copy(얇은 복사)
+      -원시형 자료룰 변수에 할당한 뒤 해당 변수를 복사하면 값 자체가 복사됨 (deep copy)
+      -원본값을
      */
 
     let text = 'hello';
@@ -27,7 +34,19 @@
     let isFemaie = false;
     let err;
 
+    let text2 = text;
+
+    text2 = 'world';
+    console.log(text2);
+    console.log(text)
+
     let colors = ['red', 'green', 'blue'];
+    let colors2 = colors;
+    colors2[0] = 'hotpink';
+    console.log(colors2)
+    console.log(colors)
+
+
     let student1 = {
       name: '홍길동',
       isFemale: false,
@@ -37,7 +56,7 @@
 
     console.log(typeof student1);
 
-    console.log(interests)
+    console.log()
   </script>
 </body>
 
