--- a/index.html
+++ b/index.html
@@ -10,53 +10,14 @@
 <body>
   <script>
     /*
-      원시형자료(primitive type) vs 첨조횽자료(reference type)
-      원시형자료는 메모리에 값자체가 담기는 자료 (문자열, 숫자, boolean, undefined)
-      원시형자료는 callstack에 메모리 선언후 값도 담김
-
-      참조형자료 (베열, 객체, null)
-      참조형자료는 메모리에 값이 담기는게 아닌 값의 참조위치값이 담김
-      해당값으로 실행할 수 있는 여러 기능들까지 같이 참조됨
-      참조형자료는 메모리는 callstack에 생기고 값 자체룰 heap memory에 생성됨
-      heap메모리에 있는 값의 위치값이 callstack메모리에 참조됨
-
-      자바스크립트에서의 객체지향
-      모든 객체에는 prototype이라는 공통의 저장공간이 있고
-      prototype안에는 해당 참조형 자료가 활용할수 있는 다양한 메서드를 담고 있음
-
-      deep copy(깊은 복사) vs shallow copy(얇은 복사)
-      -원시형 자료룰 변수에 할당한 뒤 해당 변수를 복사하면 값 자체가 복사됨 (deep copy)
-      -원본값을
-     */
-
-    let text = 'hello';
-    let num = 3;
-    let isFemaie = false;
-    let err;
-
-    let text2 = text;
-
-    text2 = 'world';
-    console.log(text2);
-    console.log(text)
-
+     전개연산자 (Spread Operator)
+     -기존의 참조형 자료를 값을 다 꺼내서 펼친뒤 deep copy
+   */
     let colors = ['red', 'green', 'blue'];
-    let colors2 = colors;
+    let colors2 = [...colors];  //기존의 참조형 자료값을 꺼내서 deep copy한 다음에 새로운 변수에 할당
     colors2[0] = 'hotpink';
-    console.log(colors2)
-    console.log(colors)
-
-
-    let student1 = {
-      name: '홍길동',
-      isFemale: false,
-      interests: ['game', 'movie', 'travel']
-    }
-    let score = null;
-
-    console.log(typeof student1);
-
-    console.log()
+    console.log('colors2', colors);
+    console.log('colors', colors2);
   </script>
 </body>
 
