--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     //해당 객체의 값이 없을때에는 일단 무시하고 넘어간뒤 해당값이 있을때 호출
     //option chaining
     let obj = null;
-    console.log(obj?.name);
+    console.log(obj?.name || 'default');
 
     obj = {
       name: 'Andy'
