--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 
 <body>
   <script>
-    //외부 서버테이터를 가져와야 되는 경우
-    //초기에 변수를 선언하는 해야 되는데 담을 값이 없을 경우
+    //비구조화할당, 구조분해할당 (Destructuring) 
 
-    //객체의 값이 없을때 바로 에러가 뜨면서 다음의 구문이 실행안됨
-    //해당 객체의 값이 없을때에는 일단 무시하고 넘어간뒤 해당값이 있을때 호출
-    //option chaining
-    let obj = null;
-    console.log(obj?.name || 'default');
+    const colors = ['red', 'green', 'blue'];
+    // const color1 = colors[0];
+    // const color2 = colors[1];
+    // const color3 = colors[2];
 
-    obj = {
-      name: 'Andy'
-    }
+    const [color1, color2, color3] = colors;
+    console.log(color1);
 
-    console.log(obj.name);
   </script>
 </body>
 
