--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <script>
     //비구조화할당, 구조분해할당 (Destructuring) 
+    //배열이나 객체같은 반복적인 값을 한번에 추출
+    //배열값을 비구조화할당시에는 변수명은 아무거나 가능
 
     const colors = ['red', 'green', 'blue'];
     // const color1 = colors[0];
@@ -18,6 +20,15 @@
 
     const [color1, color2, color3] = colors;
     console.log(color1);
+
+    const student1 = {
+      name: 'David',
+      age: 20,
+      address: 'Seoul'
+    }
+
+    const { name, age, address } = student1;
+    console.log(name);
 
   </script>
 </body>
