유사배열을 순수배열 형태로 반환

--- a/index.html
+++ b/index.html
@@ -17,50 +17,55 @@
     const lis = document.querySelectorAll('li');
     console.log(lis);
 
+    //forEach 순수배열이 아닌 유사배열도 반복가능
     lis.forEach((data) => {
       console.log(data);
     })
 
-    lis.map((data) => {
+    //순수배열만 반복가능
+    //querySelectorAll로 받아지는 배열값은 유사뱌열이기 때문에 map으로 반복처리 불가능
+    //해결방법 - 유사배열을 순수배열로 변경
+    const newlis = Array.from(lis); //유사배열을 인수로 받아서 순수배열형태로 반환
+    newlis.map((data) => {
       console.log(data);
     })
 
 
 
-    /*
-      forEach vs map
-    */
-    const colors = ['red', 'green', 'blue'];
-    const rabbit = ['루토끼', '지토끼', '유토끼'];
+    // /*
+    //   forEach vs map
+    // */
+    // const colors = ['red', 'green', 'blue'];
+    // const rabbit = ['루토끼', '지토끼', '유토끼'];
 
-    //반복기능만 있음
-    const result1 = colors.forEach((data, index) => {
-      console.log(data);
-      console.log(index);
-    })
-    console.log(result1);
+    // //반복기능만 있음
+    // const result1 = colors.forEach((data, index) => {
+    //   console.log(data);
+    //   console.log(index);
+    // })
+    // console.log(result1);
 
-    //반복기능 + 기본배열을 deep copy반환
-    //map은 기존의 원본 배열을 훼손시키지 않으면서 새로운 배열을 반환하는 불변성 유지 가능
-    const result2 = colors.map((data, index) => {
-      console.log(data);
-      console.log(index);
-      return data;
-    })
-    console.log(result2);
-    result2[0] = 'hotpink';
+    // //반복기능 + 기본배열을 deep copy반환
+    // //map은 기존의 원본 배열을 훼손시키지 않으면서 새로운 배열을 반환하는 불변성 유지 가능
+    // const result2 = colors.map((data, index) => {
+    //   console.log(data);
+    //   console.log(index);
+    //   return data;
+    // })
+    // console.log(result2);
+    // result2[0] = 'hotpink';
 
-    console.log(result2);
-    console.log(colors);
+    // console.log(result2);
+    // console.log(colors);
 
-    const result3 = rabbit.map((data, index) => {
-      console.log(data);
-      console.log(index);
-      return data;
-    })
-    console.log(result3);
-    result3[0] = '이토끼';
-    console.log(result3);
+    // const result3 = rabbit.map((data, index) => {
+    //   console.log(data);
+    //   console.log(index);
+    //   return data;
+    // })
+    // console.log(result3);
+    // result3[0] = '이토끼';
+    // console.log(result3);
 
   </script>
 </body>
