--- a/index.html
+++ b/index.html
@@ -8,64 +8,33 @@
 </head>
 
 <body>
-  <ul>
-    <li>list1</li>
-    <li>list2</li>
-    <li>list3</li>
-  </ul>
+
   <script>
-    const lis = document.querySelectorAll('li');
-    console.log(lis);
+    //for of : 문자를 반복처리
+    const text = 'DEVELOPMENT'; //es6이후부터는 문자값도 반복가능한 객체로 인식(이터러블 객체)
 
-    //forEach 순수배열이 아닌 유사배열도 반복가능
-    lis.forEach((data) => {
-      console.log(data);
-    })
+    for (let letter of text) {
+      console.log(letter);
+    }
+    //fot in : 객체의 key를 반복처리 (es6)
+    const student = {
+      name: 'David',
+      age: 20,
+      address: 'Seoul',
+      hobby: 'game'
+    }
+    for (let key in student) {
+      //for in 반복문에서는 key값을 문자로 반복처리하기 때문에
+      //객체명.key호출 불가능
+      //객체명[key] 호출
+      console.log(student[key]);
+    }
 
-    //순수배열만 반복가능
-    //querySelectorAll로 받아지는 배열값은 유사뱌열이기 때문에 map으로 반복처리 불가능
-    //해결방법 - 유사배열을 순수배열로 변경
-    const newlis = Array.from(lis); //유사배열을 인수로 받아서 순수배열형태로 반환
-    newlis.map((data) => {
-      console.log(data);
-    })
-
-
-
-    // /*
-    //   forEach vs map
-    // */
-    // const colors = ['red', 'green', 'blue'];
-    // const rabbit = ['루토끼', '지토끼', '유토끼'];
-
-    // //반복기능만 있음
-    // const result1 = colors.forEach((data, index) => {
-    //   console.log(data);
-    //   console.log(index);
-    // })
-    // console.log(result1);
-
-    // //반복기능 + 기본배열을 deep copy반환
-    // //map은 기존의 원본 배열을 훼손시키지 않으면서 새로운 배열을 반환하는 불변성 유지 가능
-    // const result2 = colors.map((data, index) => {
-    //   console.log(data);
-    //   console.log(index);
-    //   return data;
-    // })
-    // console.log(result2);
-    // result2[0] = 'hotpink';
-
-    // console.log(result2);
-    // console.log(colors);
-
-    // const result3 = rabbit.map((data, index) => {
-    //   console.log(data);
-    //   console.log(index);
-    //   return data;
-    // })
-    // console.log(result3);
-    // result3[0] = '이토끼';
-    // console.log(result3);
+    //es7
+    //Object.keys(객체명): 배열로 해당 객체의 key를 반환
+    //Object.values(객체명): 배열로 해당 객체의 value값을 반환
+    console.log(Object.keys(student))
+    console.log(Object.values(student))
 
   </script>
 </body>
