--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     for (let letter of text) {
       console.log(letter);
     }
-    //fot in : 객체의 key를 반복처리 (es6)
+    //fot in : 객체의 key를 반복처리(es6)
     const student = {
       name: 'David',
       age: 20,
@@ -35,6 +35,8 @@
     //Object.values(객체명): 배열로 해당 객체의 value값을 반환
     console.log(Object.keys(student))
     console.log(Object.values(student))
+
+    Object.keys(student).forEach(key => console.log(student[key]))
 
   </script>
 </body>
