--- a/index.html
+++ b/index.html
@@ -36,7 +36,25 @@
     console.log(Object.keys(student))
     console.log(Object.values(student))
 
+    //Object.keys로 반환된 배열값을 바로 반복처리
     Object.keys(student).forEach(key => console.log(student[key]))
+
+    //filter : 기존 배열값의 불변성을 유지하면서 특정조건에 부합되는 새로운 배열을 반환
+    const studentDB = [
+      { mame: 'David', age: 20, 'hobby': 'game' },
+      { mame: 'Emily', age: 18, 'hobby': 'music ' },
+      { mame: 'peter', age: 20, }
+    ];
+    const result = studentDB.map((data) => {
+      return data.hobby;
+    })
+    console.log(result); // ['game', 'music','undefined']
+
+    //filter의 인수로 조건식을 넣어서 
+    //해당 조건에 부합되는 값만 배열로 반환
+    const abc = result.filter(data => data !== undefined);
+    console.log(abc);
+
 
   </script>
 </body>
