이벤트핸들러에서 화살표함수 호출

--- a/index.html
+++ b/index.html
@@ -15,26 +15,24 @@
   </ul>
   <script>
     const btns = document.querySelectorAll('.btns li');
+
+    const handler = () => {
+      console.log('test')
+    }
+
+    const handlerText = (text) => {
+      console.log(text);
+      return text;
+    }
+
     //es6
-    /*
-    btns.forEach(btn => {
-      //화살표함수 안쪽의 this객체는 무조건 윈도우 객체가 찍힘
-      //화살표함수 안쪽애서는 this객체가 아예 생성이 안됨
-      //코드블록안쪽에서 this객체가 없을떄에는 상위스코프에 있는 값을 끌어옴
-      btn.addEventListener('click', (e) => {
-        // console.log(btn);
-        console.log(this)
-      })
-    })
-    */
-    //es5
-    btns.forEach(function (btn) {
-      // 일반 function문으로 이벤트헨들러 연결시 내부의 this객체는 이벤트가 발생한 대상을 지칭
-      // 기존의 function문은 호출되는 위치에 따라 내부에 생성되는 this의 값이 변경됨
-      btn.addEventListener('click', function (e) {
-        console.log(this)
-      }.bind(this))
-    })
+    //이벤트 발생시 호출할 함수에 인수를 전달할 필요가 없을떄
+    btns[0].addEventListener('click', handler)
+    //이벤트 발생시 호출할 함수에 인수를 전달해야 될때 다시 화살표함수로 wrapping처리
+    btns[1].addEventListener('click', () => handlerText('hello'))
+
+
+
   </script>
 </body>
 
