--- a/index.html
+++ b/index.html
@@ -6,36 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    article {
-      width: 300px;
-      height: 300px;
-      background-color: aqua
-    }
 
-    /*
-    css우선순위
-    1. id로 적용한 스타일이 class로 적용한 스타일보다 우선순위가 높음
-    2. 선택자가 길고 구체적인게 우선순위가 높음
-    3. 위에 규칙을 무시하고 강제로 우선순위를 높이고 싶을때에는 속성구문 뒤에 !important적용
-    4. important로 적용했다 하더라도 자바스크립트로 스타일 덮어쓰기 가능
-    */
   </style>
 </head>
 
 <body>
+  <h1>hello</h1>
+  <!-- 
+    static DOM (HTML 태그로 구성하는 돔)
+    dynamic DOM (자바스크립트로 구성하는 돔)
 
-  <article></article>
+    <article>
+      <a href="#">link</a>
+    </article> 
 
-  <a href="https://www.naver.com" target="_blank" title="네이버 페이지로 이동">네이버</a>
+    tamplate literal
+    : 문자안에 변수를 편하게 삽입할때
+-->
+
+
 
   <script>
-    const box = document.querySelector('article');
+    '<a href="#">링크</a>'
 
-    //자바스크립트는 html외의 CSS파일에 대한 접근권한이 없으므로 css로 등록되어있는 스타일 정보값을 가져오는게 불가능
-    box.addEventListener('click', () => {
-      const boxStyle = getComputedStyle(box);
-      console.log(boxStyle['background-color'])
-    })
+    const url = 'https://www.naver.com';
+    const text = '네이버';
+    const target = '_blank';
+
+    //부모프레임.innerHTML = '자식태그 문자열';
+    //innerHTML은 기존 프레임 안 쪽에 값을 없애버리고 대입되는 문자열로 바꿔치기
+    document.body.innerHTML = `
+    <article>
+      <a href="${url}" target="${target}">${text}</a>
+    </article> 
+    `
+
   </script>
 </body>
 
