append prepend로 돔 추가

--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
 </head>
 
 <body>
-  <h1>hello</h1>
+  <h1>Hello</h1>
   <!-- 
     static DOM (HTML 태그로 구성하는 돔)
     dynamic DOM (자바스크립트로 구성하는 돔)
 
-    <article>
+
       <a href="#">link</a>
-    </article> 
 
     tamplate literal
     : 문자안에 변수를 편하게 삽입할때
+
+    BOM (Browser Object Model) window
+    DOM (Document Object Model)
+    - html (element node)
+    - a (a element node, text node, attribute node)
 -->
 
 
 
   <script>
-    '<a href="#">링크</a>'
-
-    const url = 'https://www.naver.com';
-    const text = '네이버';
-    const target = '_blank';
-
-    //부모프레임.innerHTML = '자식태그 문자열';
-    //innerHTML은 기존 프레임 안 쪽에 값을 없애버리고 대입되는 문자열로 바꿔치기
-    document.body.innerHTML = `
-    <article>
-      <a href="${url}" target="${target}">${text}</a>
-    </article> 
-    `
-
+    const a = document.createElement('a');// element만들 때 createElement
+    const href = document.createAttribute('href');//속성만들때 createAttribute
+    const text = 'link';
+    href.value = '#';
+    a.setAttributeNode(href);
+    a.innerText = text;
+    //append: 기존 부모요소의 DOM구조를 유지하면서 추가로 DOM을 삽입
+    //인수로는 노드객체만 전달가능
+    //document.body.append(a);
+    document.body.prepend(a);
   </script>
 </body>
 
